begin work on dashboard

--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@iconify-json/lucide": "^1.2.38",
     "@iconify-json/simple-icons": "^1.2.33",
     "@nuxt/ui": "^3.0.2",
+    "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "lucide-vue-next": "^0.503.0",
     "nuxt": "^3.16.2",
+    "pinia": "^3.0.2",
     "reka-ui": "^2.2.0",
     "shadcn-nuxt": "^2.1.0",
     "tailwind-merge": "^3.2.0",
