--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iconify-json/lucide": "^1.2.38",
     "@iconify-json/simple-icons": "^1.2.33",
     "@nuxt/ui": "^3.0.2",
+    "@nuxtjs/supabase": "^1.5.0",
     "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.4",
     "class-variance-authority": "^0.7.1",
@@ -33,5 +34,8 @@
     "@nuxt/eslint": "^1.3.0",
     "eslint": "^9.25.0",
     "typescript": "^5.8.3"
+  },
+  "overrides": {
+    "cookie": "1.0.2"
   }
 }
