--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/supabase": "^1.5.0",
     "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@vite-pwa/nuxt": "^1.0.1",
     "base64-arraybuffer": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
